--- a/build_local/index.html
+++ b/build_local/index.html
@@ -14,6 +14,7 @@
             <div class="container animated slideInDown">
         <img src="images/horse.jpg" alt="">
         <h1>NEIGHhhh</h1>
+        <h2>Test</h2>
     </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
