--- a/build_local/index.html
+++ b/build_local/index.html
@@ -13,7 +13,7 @@
 
             <div class="container animated slideInDown">
         <img src="images/horse.jpg" alt="">
-        <h1>NEIGHhhh Tom Rankin Rocks ... I'm soooo good .. &gt; Myke</h1>
+        <h1>NEIGHhhh Tom Rankin Rocks.. chrushin' on Myke... GitKraken</h1>
         <h2>Test</h2>
     </div>
 
