--- a/build_local/index.html
+++ b/build_local/index.html
@@ -12,7 +12,7 @@
     <body>
 
             <div class="container animated slideInDown">
-        <img src="images/horse.jpg" alt="">
+        <img src="https://pbs.twimg.com/profile_images/1294571527/Tom-Big_400x400.jpg" alt="">
         <h1>NEIGHhhh Tom Rankin Rocks.. chrushin' on Myke... GitKraken</h1>
         <h2>Test</h2>
     </div>
